<?xml version="1.0"?>
<package>
	<name>skynav_bringup</name>
	<version>0.0.0</version>
	<description>The skynav_bringup package</description>

	<maintainer email="christiaanmaks@mylittlesky.net">Christiaan Maks</maintainer>


	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
