<?xml version="1.0"?>
<package>
	<name>skynav_localnav</name>
	<version>0.0.0</version>
	<description>skynav_localnav</description>
	<maintainer email="christiaanmaks@mylittlesky.net">Christiaan Maks</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
   	<build_depend>roscpp</build_depend>
	<build_depend>skynav_msgs</build_depend>

	
	<run_depend>roscpp</run_depend>
	<run_depend>skynav_msgs</run_depend>
	
</package>


